# axum-crud

./: .env  Cargo.toml
.sqlx/: query-46ef3fddec0b098fe0c9b15df9ed8334ddd3c052d050b28f7a558d3482df2787.json  query-ea233c044f229908cce2699b1d8a6dacee583660b5c28337710e62682be4ee94.json  query-ecece00b54e3fb02a38e457339f775052bc422c96916185efbe3fa7317d101a1.json  query-f2fc5e7d1f292d6672b3f82c525dda3ac7adc2ded1330e61147397b70fe0b914.json  query-f51ea9c9aab42c4f5303c61f331bba81aacc95ef73f3eef589d1d15c1e291ef7.json
src/: config.rs  main.rs
src/middleware/: auth.rs
src/models/: user.rs
src/repos/: user_repository.rs
src/routes/: mod.rs  users.rs
